[package]
name = "cache-reserve"
version = "0.1.0"
edition = "2024"

[features]
postgres = ["sqlx", "persistent-postgres"]

[dependencies]
persistent-postgres = { git = "ssh://git@github.com/AriaBagheri/persistent-postgres-rs", version = "0.1.1", optional = true }
sqlx = { version = "0.8.3", features = ["postgres"], optional = true }
tokio = { version = "1.43.0", features = ["sync"] }
