[package]
name = "cache-reserve"
version = "0.1.4"
edition = "2024"

[features]
postgres=["persistent-postgres", "sqlx", "serde_json"]

[dependencies]
colored = "3.0.0"
tokio = { version = "1.43.0", features = ["sync", "rt-multi-thread", "macros", "time"] }

persistent-postgres = { git = "ssh://git@github.com/AriaBagheri/persistent-postgres-rs", version = ">=0.1.1", optional = true }
serde_json = { version = "1.0.139", optional = true }
sqlx = { version = "0.8.3", features = ["postgres"], optional = true }
serde = "1.0.218"
